compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_assignment_annotation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 576
expression: "\nfn wibble() {\n    let wobble: Int = 7\n    wobble\n}\n"
---
fn wibble() {
    let wobble: Int = 7
                ▔▔↑    
    wobble
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nrakun.Int\n```\n",
    ),
)
