compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 807
expression: "\nimport wibble/wobble\nconst value = wobble.Wobble\n"
---
import wibble/wobble
const value = wobble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content -----
Scalar(
    String(
        "```rakun\nwobble.Wibble\n```\n",
    ),
)
