compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_aliased.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble\ntype Local = wobble.Wibble\nconst value = wobble.Wobble\n"
---
import wibble/wobble
type Local = wobble.Wibble
const value = wobble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content -----
Scalar(
    String(
        "```rakun\nLocal\n```\n",
    ),
)
