compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_aliased_module.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 821
expression: "\nimport wibble/wobble as wubble\nconst value = wubble.Wobble\n"
---
import wibble/wobble as wubble
const value = wubble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content -----
Scalar(
    String(
        "```rakun\nwubble.Wibble\n```\n",
    ),
)
