compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_annotation_aliased_module.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1148
expression: "\nimport wibble/wobble as wubble\n\nfn main(wibble: wubble.Wibble) {\n  wibble\n}\n"
---
import wibble/wobble as wubble

fn main(wibble: wubble.Wibble) {
                ▔▔▔▔▔↑▔▔▔▔▔▔▔   
  wibble
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nwubble.Wibble\n```\n",
    ),
)
