compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_annotation_prelude.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1097
expression: "\nfn add_one(a: Int) -> Int {\n  a + 1\n}\n"
---
fn add_one(a: Int) -> Int {
                      ↑▔▔  
  a + 1
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nrakun.Int\n```\n",
    ),
)
