compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_annotation_unqualified.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1114
expression: "\nimport wibble/wobble.{type Wibble}\n\nfn main(wibble: Wibble) {\n  wibble\n}\n"
---
import wibble/wobble.{type Wibble}

fn main(wibble: Wibble) {
                ↑▔▔▔▔▔   
  wibble
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nwobble.Wibble\n```\n",
    ),
)
