compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_arg.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble\n\nfn do_things(wibble: wobble.Wibble) { wibble }\n"
---
import wibble/wobble

fn do_things(wibble: wobble.Wibble) { wibble }
             ↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔            


----- Hover content -----
Scalar(
    String(
        "```rakun\nwobble.Wibble\n```",
    ),
)
