compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_contextual_type_expression.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble\n\npub fn main() {\n  let wibble = wobble.Wibble\n}\n"
---
import wibble/wobble

pub fn main() {
  let wibble = wobble.Wibble
                     ▔▔▔▔▔↑▔
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nwobble.Wibble\n```\n\nView on [HexDocs](https://hexdocs.pm/hex/wibble/wobble.html#Wibble)",
    ),
)
